# sentiment-analysis

./: Cargo.toml
src/: lib.rs  main.rs  model.rs  train.rs
src/data/: batcher.rs  dataset.rs  tokenizer.rs
